--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.6",
+    "@radix-ui/themes": "^3.1.3",
     "axios": "^1.7.3",
     "next": "14.2.5",
     "openai": "^4.54.0",
